vms: enable qemu '-s' parameter to attach gdb

--- a/roles/vm_setup/templates/vm.xml.j2
+++ b/roles/vm_setup/templates/vm.xml.j2
@@ -1,4 +1,7 @@
-<domain type='kvm'>
+<domain type='kvm' xmlns:qemu='http://libvirt.org/schemas/domain/qemu/1.0'>
+  <qemu:commandline>
+    <qemu:arg value='-s'/>
+  </qemu:commandline>
   <name>{{ item.name }}</name>
   <memory unit='GiB'>8</memory>
   <currentMemory unit='GiB'>8</currentMemory>
