vm*.xml.j2: disable vsock auto cid

--- a/roles/vm_nested_setup/templates/vm-nested.xml.j2
+++ b/roles/vm_nested_setup/templates/vm-nested.xml.j2
@@ -109,7 +109,7 @@
       <address type='pci' domain='0x0000' bus='0x00' slot='0x09' function='0x0'/>
     </rng>
     <vsock model='virtio'>
-      <cid auto='yes' address='{{ item.cid }}'/>
+      <cid auto='no' address='{{ item.cid }}'/>
       <address type='pci' domain='0x0000' bus='0x00' slot='0x0a' function='0x0'/>
     </vsock>
   </devices>
