Use host-passthrough to fix some issues on AMD

--- a/roles/vm_nested_setup/templates/vm-nested.xml.j2
+++ b/roles/vm_nested_setup/templates/vm-nested.xml.j2
@@ -16,9 +16,7 @@
     <apic/>
     <vmport state='off'/>
   </features>
-  <cpu mode='host-model' check='partial'>
-    <model fallback='allow'/>
-  </cpu>
+  <cpu mode="host-passthrough" check="none" migratable="on"/>
   <clock offset='utc'>
     <timer name='rtc' tickpolicy='catchup'/>
     <timer name='pit' tickpolicy='delay'/>
